# attention-assessment-workshop

./: .gitignore  README.md
doc/: attention_assessment.tex  instructions.cls
templates/intro/: CMakeLists.txt  head_detection.cpp  head_pose_estimation.hpp
templates/intro/src/: head_detection.cpp  head_pose_estimation.cpp  head_pose_estimation.hpp
templates/part2/: CMakeLists.txt  package.xml  ros_node.hpp
templates/part2-python/: CMakeLists.txt
templates/part2-python/launch/: attention_assessment.launch
templates/part2-python/nodes/: current_focus.py
templates/part2/launch/: attention_assessment.launch
templates/part2/src/: ros_node.cpp
templates/part3-python/: CMakeLists.txt
templates/part3-python/launch/: attention_assessment.launch
templates/part3-python/nodes/: focus_analysis.py  log_parsing.py
